--- a/notebooks/train.ipynb
+++ b/notebooks/train.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "9b121a30",
    "metadata": {},
    "outputs": [],
@@ -10,12 +10,9 @@
     "# Random Imports\n",
     "import os\n",
     "import sys\n",
-    "import yaml\n",
-    "from pathlib import Path\n",
     "sys.path.append('/storage/vbutoi/projects')\n",
     "sys.path.append('/storage/vbutoi/libraries')\n",
-    "sys.path.append('/storage/vbutoi/projects/ESE')\n",
-    "sys.path.append('/storage/vbutoi/projects/UniverSegDev')\n",
+    "sys.path.append('/storage/vbutoi/projects/SeBench')\n",
     "\n",
     "# Regular schema dictates that we put DATAPATH\n",
     "os.environ['DATAPATH'] = ':'.join((\n",
@@ -67,11 +64,10 @@
     "    split: 'val'\n",
     "  \n",
     "loss_func: \n",
+    "  _class: sebench.losses.SoftDiceLoss\n",
     "  from_logits: True\n",
     "  batch_reduction: 'mean' \n",
-    "  # One of these most also be defined, but for reasons we won't actually have them be ?.\n",
-    "  # _class: ?\n",
-    "  # _combo_class: ?"
+    "  ignore_empty_labels: False "
    ]
   },
   {
@@ -104,7 +100,7 @@
     "%%yaml model_cfg  \n",
     "\n",
     "model:\n",
-    "  _class: ese.models.unet.UNet\n",
+    "  _class: sebench.models.unet.UNet\n",
     "  filters: '?'\n",
     "  convs_per_block: '?' # Good default for UNets."
    ]
@@ -120,9 +116,9 @@
     "\n",
     "callbacks:\n",
     "  step:\n",
-    "    - ese.callbacks.ShowPredictions\n",
+    "    - sebench.callbacks.ShowPredictions\n",
     "  epoch:\n",
-    "    - ese.callbacks.WandbLogger\n",
+    "    - sebench.callbacks.WandbLogger\n",
     "    - ionpy.callbacks.ETA\n",
     "    - ionpy.callbacks.JobProgress\n",
     "    - ionpy.callbacks.TerminateOnNaN\n",
@@ -134,30 +130,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "c94caba0",
    "metadata": {},
    "outputs": [],
    "source": [
-    "%%yaml aug_cfg\n",
+    "# %%yaml aug_cfg\n",
     "\n",
-    "augmentations:\n",
-    "    spatial:\n",
-    "        max_translation: 5.0\n",
-    "        max_rotation: 5.0\n",
-    "        max_scaling: 1.1\n",
-    "        warp_integrations: 5\n",
-    "        warp_smoothing_range: [10, 20]\n",
-    "        warp_magnitude_range: [1, 3]\n",
-    "        affine_probability: 0.5\n",
-    "        warp_probability: 0.5\n",
-    "    visual:\n",
-    "        use_mask: False \n",
-    "        added_noise_max_sigma: 0.01\n",
-    "        gamma_scaling_max: 0.1\n",
-    "        bias_field_probability: 0.5\n",
-    "        gamma_scaling_probability: 0.5\n",
-    "        added_noise_probability: 0.5"
+    "# augmentations:\n",
+    "#     spatial:\n",
+    "#         max_translation: 5.0\n",
+    "#         max_rotation: 5.0\n",
+    "#         max_scaling: 1.1\n",
+    "#         warp_integrations: 5\n",
+    "#         warp_smoothing_range: [10, 20]\n",
+    "#         warp_magnitude_range: [1, 3]\n",
+    "#         affine_probability: 0.5\n",
+    "#         warp_probability: 0.5\n",
+    "#     visual:\n",
+    "#         use_mask: False \n",
+    "#         added_noise_max_sigma: 0.01\n",
+    "#         gamma_scaling_max: 0.1\n",
+    "#         bias_field_probability: 0.5\n",
+    "#         gamma_scaling_probability: 0.5\n",
+    "#         added_noise_probability: 0.5"
    ]
   },
   {
@@ -177,36 +173,11 @@
     "    torch_compile: True\n",
     "\n",
     "data:\n",
-    "    _class: \"ese.datasets.ISLES\"\n",
+    "    _class: \"sebench.datasets.ISLES\"\n",
     "\n",
     "dataloader:\n",
     "    batch_size: 1\n",
-    "    num_workers: 1\n",
-    "\n",
-    "loss_func:\n",
-    "    _combo_class: \n",
-    "        dice_loss:\n",
-    "            _class: ese.losses.SoftDiceLoss\n",
-    "            from_logits: True\n",
-    "            batch_reduction: 'mean' \n",
-    "            ignore_empty_labels: False \n",
-    "        proportion_estimation_error:\n",
-    "            _class: ese.losses.AreaEstimationError\n",
-    "            from_logits: True\n",
-    "            proportion: True\n",
-    "            abs_diff: True\n",
-    "            square_diff: False\n",
-    "    convex_param:\n",
-    "        - 0.0\n",
-    "        - 0.1\n",
-    "        - 0.2\n",
-    "        - 0.4\n",
-    "        - 0.5\n",
-    "        - 0.6\n",
-    "        - 0.7\n",
-    "        - 0.8\n",
-    "        - 0.9\n",
-    "        - 1.0"
+    "    num_workers: 1"
    ]
   },
   {
@@ -216,14 +187,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from ese.analysis.analysis_utils.submit_utils import get_ese_training_configs \n",
+    "from sebench.experiment.utils import get_training_configs\n",
     "\n",
     "# Get the configs for the different runs.\n",
-    "# base_cfg = Config(default_cfg).update([model_cfg, log_cfg, callbacks_cfg])\n",
-    "base_cfg = Config(default_cfg).update([model_cfg, log_cfg, callbacks_cfg, aug_cfg])\n",
+    "base_cfg = Config(default_cfg).update([model_cfg, log_cfg, callbacks_cfg])\n",
+    "# base_cfg = Config(default_cfg).update([model_cfg, log_cfg, callbacks_cfg, aug_cfg])\n",
     "\n",
     "# Get the different experiment cfg yamls.\n",
-    "updated_base_cfg, train_cfgs = get_ese_training_configs(\n",
+    "updated_base_cfg, train_cfgs = get_training_configs(\n",
     "    exp_cfg=experiment_cfg, \n",
     "    base_cfg=base_cfg\n",
     ")"
@@ -254,17 +225,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# ####### FOR DEBUGGIN\n",
-    "# from ese.experiment import run_ese_exp, CalibrationExperiment\n",
+    "####### FOR DEBUGGIN\n",
+    "from sebench.experiment.utils import run_exp\n",
+    "from sebench.experiment.train import SegTrainExperiment\n",
     "\n",
-    "# run_ese_exp(\n",
-    "#     config=train_cfgs[0], \n",
-    "#     experiment_class=CalibrationExperiment,\n",
-    "#     run_name='debug',\n",
-    "#     show_examples=True,\n",
-    "#     track_wandb=False,\n",
-    "#     gpu='0',\n",
-    "# )"
+    "run_exp(\n",
+    "    config=train_cfgs[0], \n",
+    "    experiment_class=SegTrainExperiment,\n",
+    "    run_name='debug',\n",
+    "    show_examples=True,\n",
+    "    track_wandb=False,\n",
+    "    gpu='0',\n",
+    ")"
    ]
   },
   {
@@ -274,19 +246,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# FOR SUBMISSION\n",
-    "from ese.experiment import submit_ese_exps, CalibrationExperiment \n",
+    "# # FOR SUBMISSION\n",
+    "# from sebench.experiment.utils import run_exp\n",
+    "# from sebench.experiment.train import SegTrainExperiment\n",
     "\n",
-    "submit_ese_exps(\n",
-    "    group=\"training\",\n",
-    "    base_cfg=updated_base_cfg,\n",
-    "    exp_cfg=experiment_cfg,\n",
-    "    config_list=train_cfgs,\n",
-    "    experiment_class=CalibrationExperiment,\n",
-    "    track_wandb=True,\n",
-    "    # available_gpus=['0', '1', '2', '3'l\n",
-    "    available_gpus=['0', '1', '2', '3', '4', '5', '6', '7'],\n",
-    ")"
+    "# submit_exps(\n",
+    "#     group=\"training\",\n",
+    "#     base_cfg=updated_base_cfg,\n",
+    "#     exp_cfg=experiment_cfg,\n",
+    "#     config_list=train_cfgs,\n",
+    "#     experiment_class=SegTrainExperiment,\n",
+    "#     track_wandb=True,\n",
+    "#     available_gpus=['0', '1', '2', '3', '4', '5', '6', '7'],\n",
+    "# )"
    ]
   }
  ],
