sebench working as a standlone unit now

--- a/notebooks/train.ipynb
+++ b/notebooks/train.ipynb
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "8769a35d",
    "metadata": {},
    "outputs": [],
@@ -226,7 +226,7 @@
    "outputs": [],
    "source": [
     "####### FOR DEBUGGIN\n",
-    "from sebench.experiment.utils import run_exp\n",
+    "from sebench.experiment.runner import run_exp\n",
     "from sebench.experiment.train import SegTrainExperiment\n",
     "\n",
     "run_exp(\n",
