working on getting segvit training

--- a/notebooks/train.ipynb
+++ b/notebooks/train.ipynb
@@ -50,7 +50,7 @@
     "\n",
     "optim: \n",
     "  _class: torch.optim.Adam\n",
-    "  lr: '?'\n",
+    "  lr: 1.0e-4 \n",
     "  \n",
     "train:\n",
     "  epochs: '?' \n",
@@ -100,9 +100,7 @@
     "%%yaml model_cfg  \n",
     "\n",
     "model:\n",
-    "  _class: sebench.models.unet.UNet\n",
-    "  filters: '?'\n",
-    "  convs_per_block: '?' # Good default for UNets."
+    "  _class: sebench.models.SegViT"
    ]
   },
   {
@@ -165,7 +163,7 @@
    "source": [
     "%%yaml experiment_cfg \n",
     "\n",
-    "group: \"ISLES_DebugSliter\"\n",
+    "group: \"OCTA_SegVit\"\n",
     "\n",
     "experiment:\n",
     "    seed: 40\n",
@@ -173,7 +171,7 @@
     "    torch_compile: True\n",
     "\n",
     "data:\n",
-    "    _class: \"sebench.datasets.ISLES\"\n",
+    "    _class: \"sebench.datasets.OCTA_6M\"\n",
     "\n",
     "dataloader:\n",
     "    batch_size: 1\n",
@@ -182,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "8769a35d",
    "metadata": {},
    "outputs": [],
