modifications, need to keep working through

--- a/notebooks/train.ipynb
+++ b/notebooks/train.ipynb
@@ -53,8 +53,8 @@
     "  lr: 1.0e-4 \n",
     "  \n",
     "train:\n",
-    "  epochs: '?' \n",
-    "  eval_freq: '?'\n",
+    "  epochs: 300 \n",
+    "  eval_freq: 10 \n",
     "\n",
     "# Used for additional data experiment.\n",
     "data:\n",
@@ -81,7 +81,7 @@
     "\n",
     "log:\n",
     "  root: '?'\n",
-    "  checkpoint_freq: '?'\n",
+    "  checkpoint_freq: 10 \n",
     "  metrics:\n",
     "    dice_score:\n",
     "      _fn: ionpy.metrics.dice_score\n",
@@ -100,7 +100,7 @@
     "%%yaml model_cfg  \n",
     "\n",
     "model:\n",
-    "  _class: sebench.models.SegViT"
+    "  _class: sebench.models.Segmenter"
    ]
   },
   {
@@ -163,15 +163,17 @@
    "source": [
     "%%yaml experiment_cfg \n",
     "\n",
-    "group: \"OCTA_SegVit\"\n",
+    "group: \"WBC_Segmenter\"\n",
     "\n",
     "experiment:\n",
     "    seed: 40\n",
     "    seed_range: 1\n",
-    "    torch_compile: True\n",
+    "    torch_compile: False \n",
     "\n",
     "data:\n",
-    "    _class: \"sebench.datasets.OCTA_6M\"\n",
+    "    _class: \"sebench.datasets.Segment2D\"\n",
+    "    task: \"WBC/CV/EM/0\"\n",
+    "    resolution: 64\n",
     "\n",
     "dataloader:\n",
     "    batch_size: 1\n",
