working through decoder

--- a/notebooks/train.ipynb
+++ b/notebooks/train.ipynb
@@ -103,6 +103,7 @@
     "  _class: sebench.models.Segmenter\n",
     "  in_channels: 1\n",
     "  out_channels: 2\n",
+    "  dec_type: \"mask\"\n",
     "  img_res:\n",
     "    - 64 \n",
     "    - 64 "
