working through restructure so that it is project agnostic

--- a/notebooks/train.ipynb
+++ b/notebooks/train.ipynb
@@ -193,7 +193,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sebench.experiment.utils import get_training_configs\n",
+    "# from sebench.experiment.utils import get_training_configs\n",
+    "from sebench.scripts import get_training_configs\n",
     "\n",
     "# Get the configs for the different runs.\n",
     "base_cfg = Config(default_cfg).update([model_cfg, log_cfg, callbacks_cfg])\n",
@@ -232,8 +233,8 @@
    "outputs": [],
    "source": [
     "####### FOR DEBUGGIN\n",
-    "from sebench.experiment.runner import run_exp\n",
-    "from sebench.experiment.train import SegTrainExperiment\n",
+    "from sebench.scripts import run_exp\n",
+    "from sebench.experiment import SegTrainExperiment\n",
     "\n",
     "run_exp(\n",
     "    config=train_cfgs[0], \n",
@@ -252,19 +253,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# # FOR SUBMISSION\n",
-    "# from sebench.experiment.utils import run_exp\n",
-    "# from sebench.experiment.train import SegTrainExperiment\n",
+    "# FOR SUBMISSION\n",
+    "from sebench.scripts import run_exp\n",
+    "from sebench.experiment.train import SegTrainExperiment\n",
     "\n",
-    "# submit_exps(\n",
-    "#     group=\"training\",\n",
-    "#     base_cfg=updated_base_cfg,\n",
-    "#     exp_cfg=experiment_cfg,\n",
-    "#     config_list=train_cfgs,\n",
-    "#     experiment_class=SegTrainExperiment,\n",
-    "#     track_wandb=True,\n",
-    "#     available_gpus=['0', '1', '2', '3', '4', '5', '6', '7'],\n",
-    "# )"
+    "submit_exps(\n",
+    "    group=\"training\",\n",
+    "    base_cfg=updated_base_cfg,\n",
+    "    exp_cfg=experiment_cfg,\n",
+    "    config_list=train_cfgs,\n",
+    "    experiment_class=SegTrainExperiment,\n",
+    "    track_wandb=True,\n",
+    "    available_gpus=['0', '1', '2', '3', '4', '5', '6', '7'],\n",
+    ")"
    ]
   }
  ],
