restructure done, need to fix broken bits now

--- a/notebooks/train.ipynb
+++ b/notebooks/train.ipynb
@@ -253,19 +253,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# FOR SUBMISSION\n",
-    "from sebench.scripts import run_exp\n",
-    "from sebench.experiment.train import SegTrainExperiment\n",
+    "# # FOR SUBMISSION\n",
+    "# from sebench.scripts import run_exp\n",
+    "# from sebench.experiment.train import SegTrainExperiment\n",
     "\n",
-    "submit_exps(\n",
-    "    group=\"training\",\n",
-    "    base_cfg=updated_base_cfg,\n",
-    "    exp_cfg=experiment_cfg,\n",
-    "    config_list=train_cfgs,\n",
-    "    experiment_class=SegTrainExperiment,\n",
-    "    track_wandb=True,\n",
-    "    available_gpus=['0', '1', '2', '3', '4', '5', '6', '7'],\n",
-    ")"
+    "# submit_exps(\n",
+    "#     group=\"training\",\n",
+    "#     base_cfg=updated_base_cfg,\n",
+    "#     exp_cfg=experiment_cfg,\n",
+    "#     config_list=train_cfgs,\n",
+    "#     experiment_class=SegTrainExperiment,\n",
+    "#     track_wandb=True,\n",
+    "#     available_gpus=['0', '1', '2', '3', '4', '5', '6', '7'],\n",
+    "# )"
    ]
   }
  ],
