small additions, reorg has worked I think

--- a/notebooks/train.ipynb
+++ b/notebooks/train.ipynb
@@ -203,7 +203,9 @@
     "# Get the different experiment cfg yamls.\n",
     "updated_base_cfg, train_cfgs = get_training_configs(\n",
     "    exp_cfg=experiment_cfg, \n",
-    "    base_cfg=base_cfg\n",
+    "    base_cfg=base_cfg,\n",
+    "    config_root=\"/storage/vbutoi/projects/SeBench/sebench/configs\",\n",
+    "    scratch_root=\"/storage/vbutoi/scratch/ESE/SeBench\"\n",
     ")"
    ]
   },
