working through some cleanup

--- a/notebooks/train.ipynb
+++ b/notebooks/train.ipynb
@@ -122,7 +122,7 @@
     "  step:\n",
     "    - sebench.callbacks.ShowPredictions\n",
     "  epoch:\n",
-    "    - sebench.callbacks.WandbLogger\n",
+    "    - ionpy.callbacks.WandbLogger\n",
     "    - ionpy.callbacks.ETA\n",
     "    - ionpy.callbacks.JobProgress\n",
     "    - ionpy.callbacks.TerminateOnNaN\n",
