--- a/notebooks/train.ipynb
+++ b/notebooks/train.ipynb
@@ -7,20 +7,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Random Imports\n",
-    "import os\n",
-    "import sys\n",
-    "sys.path.append('/storage/vbutoi/projects')\n",
-    "sys.path.append('/storage/vbutoi/libraries')\n",
-    "sys.path.append('/storage/vbutoi/projects/SeBench')\n",
-    "\n",
-    "# Regular schema dictates that we put DATAPATH\n",
-    "os.environ['DATAPATH'] = ':'.join((\n",
-    "       '/storage/vbutoi/datasets',\n",
-    "       '/storage',\n",
-    "))\n",
-    "os.environ['WANDB_NOTEBOOK_NAME'] = 'train.ipynb'\n",
-    "\n",
     "# Define useful paths\n",
     "SCRATCH_ROOT = \"/storage/vbutoi/scratch/ESE/SeBench\"\n",
     "CONFIG_ROOT = \"/storage/vbutoi/projects/SeBench/configs\"\n",
@@ -47,6 +33,12 @@
     "  val_first: False \n",
     "  torch_compile: True \n",
     "  torch_mixed_precision: False\n",
+    "  sys_paths:\n",
+    "    - \"/storage/vbutoi/projects\"\n",
+    "    - \"/storage/vbutoi/projects/SeBench\"\n",
+    "  data_paths:\n",
+    "    - \"/storage\"\n",
+    "    - \"/storage/vbutoi/datasets\"\n",
     "    \n",
     "dataloader:\n",
     "  batch_size: '?' \n",
@@ -234,23 +226,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "edbdcf3d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# ####### FOR DEBUGGIN\n",
-    "# from sebench.scripts import run_exp\n",
-    "# from sebench.experiment import SegTrainExperiment\n",
+    "####### FOR DEBUGGIN\n",
+    "from sebench.scripts import run_exp\n",
+    "from sebench.experiment import SegTrainExperiment\n",
     "\n",
-    "# run_exp(\n",
-    "#     config=train_cfgs[0], \n",
-    "#     experiment_class=SegTrainExperiment,\n",
-    "#     run_name='debug',\n",
-    "#     show_examples=True,\n",
-    "#     track_wandb=False,\n",
-    "#     gpu='0',\n",
-    "# )"
+    "run_exp(\n",
+    "    config=train_cfgs[0], \n",
+    "    experiment_class=SegTrainExperiment,\n",
+    "    run_name='debug',\n",
+    "    show_examples=True,\n",
+    "    track_wandb=False,\n",
+    "    gpu='0',\n",
+    ")"
    ]
   },
   {
@@ -276,18 +268,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# FOR SUBMISSION\n",
-    "from sebench.scripts import submit_exps\n",
-    "from sebench.experiment.train import SegTrainExperiment\n",
+    "# # FOR SUBMISSION\n",
+    "# from sebench.scripts import submit_exps\n",
+    "# from sebench.experiment.train import SegTrainExperiment\n",
     "\n",
-    "submit_exps(\n",
-    "    config_list=train_cfgs,\n",
-    "    exp_cfg=experiment_cfg,\n",
-    "    base_cfg=updated_base_cfg,\n",
-    "    submit_cfg=submit_cfg,\n",
-    "    experiment_class=SegTrainExperiment,\n",
-    "    available_gpus=['0', '1', '2', '3', '4', '5', '6', '7'],\n",
-    ")"
+    "# submit_exps(\n",
+    "#     submit_cfg=submit_cfg,\n",
+    "#     config_list=train_cfgs,\n",
+    "#     exp_cfg=experiment_cfg,\n",
+    "#     base_cfg=updated_base_cfg,\n",
+    "#     experiment_class=SegTrainExperiment,\n",
+    "#     available_gpus=['0', '1', '2', '3', '4', '5', '6', '7'],\n",
+    "# )"
    ]
   }
  ],
