got rid of common funcs, bugfix time

--- a/notebooks/train.ipynb
+++ b/notebooks/train.ipynb
@@ -232,7 +232,7 @@
    "outputs": [],
    "source": [
     "####### FOR DEBUGGIN\n",
-    "from sebench.scripts import run_exp\n",
+    "from ionpy.slite import run_exp\n",
     "from sebench.experiment import SegTrainExperiment\n",
     "\n",
     "run_exp(\n",
@@ -269,7 +269,7 @@
    "outputs": [],
    "source": [
     "# # FOR SUBMISSION\n",
-    "# from sebench.scripts import submit_exps\n",
+    "# from ionpy.slite import submit_exps\n",
     "# from sebench.experiment.train import SegTrainExperiment\n",
     "\n",
     "# submit_exps(\n",
