--- a/notebooks/train.ipynb
+++ b/notebooks/train.ipynb
@@ -286,9 +286,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "UniverSegTF",
    "language": "python",
-   "name": "python3"
+   "name": "universegtf"
   },
   "language_info": {
    "codemirror_mode": {
