small processing fixes

--- a/notebooks/util_notebooks/proc_SIIM_ACR.ipynb
+++ b/notebooks/util_notebooks/proc_SIIM_ACR.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,22 +19,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/javascript": "\n            require(\n                [\n                    \"notebook/js/codecell\",\n                    \"codemirror/mode/yaml/yaml\"\n                ],\n                function(cc){\n                    cc.CodeCell.options_default.highlight_modes.magic_yaml = {\n                        reg: [\"^%%yaml\"]\n                    }\n                }\n            );\n            ",
+      "text/plain": [
+       "<IPython.core.display.Javascript object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "%%yaml thunder_cfg\n",
     "\n",
     "seed: 42\n",
-    "version: 3.0 \n",
+    "version: 1.0 \n",
     "visualize: False  \n",
     "dst_dir: \"/storage/vbutoi/datasets/SIIM_ACR/thunder_siim_acr\"\n",
-    "proc_root: \"/storage/vbutoi/datasets/SIIM_ACR/raw_data\""
+    "proc_root: \"/storage/vbutoi/datasets/SIIM_ACR/raw_data/pneumothorax\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,9 +56,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Finding dicom files.: 100%|██████████| 12089/12089 [00:14<00:00, 853.53it/s]\n",
+      "100%|██████████| 12089/12089 [15:26<00:00, 13.05it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "train: 1665 samples\n",
+      "val: 357 samples\n",
+      "test: 357 samples\n"
+     ]
+    }
+   ],
    "source": [
     "from sebench.datasets.utils import thunderify_SIIM_ACR\n",
     "\n",
